Opened 8 years ago
Closed 8 years ago
#13383 closed bug (fixed)
PANIC after update: calculated irq routing doesn't match bios for PCI 2:0:0
Reported by: | KapiX | Owned by: | tqh |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Drivers/ACPI | Version: | R1/Development |
Keywords: | Cc: | kallisti5 | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
hrev51026 gcc5h Samsung NP270E5V-K01
I'm guessing acpica update is responsible.
Attachments (1)
Change History (12)
by , 8 years ago
Attachment: | IMG_20170319_182213434.jpg added |
---|
comment:1 by , 8 years ago
patch: | 0 → 1 |
---|
comment:3 by , 8 years ago
patch: | 1 → 0 |
---|
comment:4 by , 8 years ago
Cc: | added |
---|
comment:5 by , 8 years ago
Could you test with hrev51025 to confirm?
http://nightly-7340.kxcdn.com/x86_hybrid/haiku_unsupported-nightly-hrev51025-x86_hybrid-anyboot.zip
comment:7 by , 8 years ago
Fix coming up. So the problem is that 32-bit addressing flag got lost in Haikus ACPICA header. It forces 32-bit addresses for ACPI on 32-bit builds. Otherwise ACPI is allowed to use addresses beyound 4GB which you can have with PAE. We should enable 64-bit addressing everywhere, but until then we need this.
comment:8 by , 8 years ago
Nice tqh! I only tested 64-bit :-|. Once in, i'll work on getting our fixed up platform header pushed to acpica.
comment:11 by , 8 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
stack trace