Add back 32 bit addressing flag for 32 bit builds.

Should fix #13383.

Leaving other warning fix as they may not be needed with new ACPICA.